# discord-bot

./: .gitignore  CMakeLists.txt  README.md
assests/audio/: BreakToWork.opus  WorkToBreak.opus
src/: SessionManager.cpp  SessionManager.h  loadcommands.h  main.cpp  utils.cpp  utils.h  voice.cpp  voice.h
src/commands/: registry.cpp  registry.h
src/commands/pomodoro/: pomodoro.cpp  pomodoro.h
src/sessions/: session_manager.cpp  session_manager.h
